# compoundry

./: .env  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.jetson.yml
scripts/: dev_run.sh
services/optimizer/: main.py
src/app/: main.py  models.py  settings.py
src/app/graph/: state.py  supervisor.py
src/app/llm/: client.py
src/app/storage/: proposals.py
src/app/tools/: notes.py
